data/derived/fa15/progs/unify/prog0636.ml.out
Characters 85-87:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type 'a -> 'b -> 'b
       but an expression was expected of type 'a list
